--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@types/node-fetch": "^2.6.1",
     "tsup": "^5.12.0",
     "typedoc": "^0.22.12",
-    "typescript": "^4.9.5"
+    "typescript": "^4.5.5"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
@@ -41,6 +41,7 @@
     "netscape-cookies-parser": "^1.0.2",
     "node-fetch": "^2.6.7",
     "puppeteer": "^16.0.0",
+    "request": "^2.88.2",
     "tiktok-scraper-ts": "^1.4.1",
     "tiktok-signature": "^1.7.3"
   }
