--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
